--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@ title: Colorchain
 {% assign row = site.data.usd_data[0] %}
 
 <main class="container">
+
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Rates for date:</h1>
+  <img src="assets/img/logo.png" style="max-width: 80%; margin-bottom: 1rem;">
+    <p class="lead">RATES FOR DATE:</p>
     <p class="lead">{{ date.first[1] }} - 6:00 AM</p>
   </div>
 
