--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@ title: Colorchain
 </div>
 
 <div class="tradingview-widget-container">
-  <div id="tv-medium-widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/COINBASE-BTCUSD/" rel="noopener" target="_blank"></div>
+  <div class="tradingview-widget-copyright"><a href="/" rel="noopener" target="_blank"></div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.MediumWidget(
