--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Colorchain
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h1 class="display-4">Live Rates</h1>
+  <p class="lead">LIVE RATES</p>
 </div>
 
 <div class="tradingview-widget-container">
