--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@ title: Colorchain
 {% assign date = site.data.usd_historic_data[0] %}
 {% assign row = site.data.usd_data[0] %}
 
+
 <main class="container">
 
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <img src="assets/img/logo.png" style="max-width: 80%; margin-bottom: 1rem;">
     <p class="lead">RATES FOR DATE:</p>
-    <p class="lead">{{ date.first[1] }} - 6:00 AM</p>
+    <p class="lead">{{ date.first[1] }} - {{ site.updated_at }}</p>
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
