--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ title: Colorchain
 <main class="container">
 
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <ph2 class="lead" style="font-weight: bold;">AKTUÁLNÍ KURZ</h2>
-    <p class="lead" style="margin:1rem 0;">Aktualizace cen probíhá každý den v {{ site.updated_at }} - {{ date.first[1] }}</p>
+    <img class="text-center" href="/" src="assets/img/logo.png" style="max-width:80%; padding:0 0 2rem 0;"></img>
+    <h2 class="display-6" style="font-weight: bold;">AKTUÁLNÍ KURZ</h2>
+    <p class="lead" style="padding-top:0.5rem;">Aktualizace cen probíhá každý den v {{ site.updated_at }}</p>
+    <p class="lead" style="margin-top:-1rem;">(všechny ceny jsou v USD)</p>
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -22,7 +24,7 @@ title: Colorchain
       <div class="card mb-4 shadow-sm" style="border-radius: 0.5rem">
 
       <div class="card-body bg-dark">
-        <h2 class="card-title pricing-card-title" style="font-weight:bold;">{{ pair[1] }}</h2>
+        <h2 class="card-title pricing-card-title" style="font-weight:bold; font-size:2.5rem">{{ pair[1] }}</h2>
       </div>
 
       <div class="card-header">
@@ -40,7 +42,7 @@ title: Colorchain
 <div class="container">
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="lead" style="font-weight:bold; margin-bottom: 2rem">LIVE RATES</h2>
+  <h2 class="display-6" style="font-weight:bold;">LIVE RATES</h2>
 </div>
 
 
@@ -103,7 +105,7 @@ title: Colorchain
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="lead" style="font-weight:bold; margin-bottom: 2rem">BTC</h2>
+  <h2 class="display-6" style="font-weight:bold;">BTC</h2>
 </div>
 
 <div class="tradingview-widget-container">
@@ -133,7 +135,7 @@ title: Colorchain
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="lead" style="font-weight:bold; margin-bottom: 2rem">ETH</h2>
+  <h2 class="display-6" style="font-weight:bold;">ETH</h2>
 </div>
 
 <div class="tradingview-widget-container">
@@ -164,7 +166,7 @@ title: Colorchain
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="lead" style="font-weight:bold; margin-bottom: 2rem">LTC</h2>
+  <h2 class="display-6" style="font-weight:bold;">LTC</h2>
 </div>
 
 <div class="tradingview-widget-container">
@@ -195,7 +197,7 @@ title: Colorchain
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="lead" style="font-weight:bold; margin-bottom: 2rem">XMR</h2>
+  <h2 class="display-6" style="font-weight:bold;">XMR</h2>
 </div>
 
 <div class="tradingview-widget-container">
