--- a/index.html
+++ b/index.html
@@ -42,11 +42,133 @@ title: Colorchain
 <div class="container">
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <a class="display-6" style="font-weight:bold;color:#000;" href="/btc.html">BTC</a>
+</div>
+
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-copyright"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.MediumWidget(
+  {
+  "container_id": "tv-medium-widget",
+  "symbols": [
+    [
+      "BTC",
+      "KRAKEN:BTCUSD|12m"
+    ]
+  ],
+  "greyText": "Quotes by",
+  "gridLineColor": "#e9e9ea",
+  "fontColor": "#83888D",
+  "underLineColor": "#dbeffb",
+  "trendLineColor": "#4bafe9",
+  "width": "100%",
+  "locale": "en"
+}
+  );
+  </script>
+</div>
+
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <a class="display-6" style="font-weight:bold;color:#000;" href="/eth.html">ETH</a>
+</div>
+
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-copyright"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.MediumWidget(
+  {
+  "container_id": "tv-medium-widget",
+  "symbols": [
+
+    [
+      "ETH",
+      "KRAKEN:ETHUSD|12m"
+    ]
+  ],
+  "greyText": "Quotes by",
+  "gridLineColor": "#e9e9ea",
+  "fontColor": "#83888D",
+  "underLineColor": "#dbeffb",
+  "trendLineColor": "#4bafe9",
+  "width": "100%",
+  "locale": "en"
+}
+  );
+  </script>
+</div>
+
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <a class="display-6" style="font-weight:bold;color:#000;" href="/ltc.html">LTC</a>
+</div>
+
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-copyright"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.MediumWidget(
+  {
+  "container_id": "tv-medium-widget",
+  "symbols": [
+
+    [
+      "LTC",
+      "KRAKEN:LTCUSD|12m"
+    ]
+  ],
+  "greyText": "Quotes by",
+  "gridLineColor": "#e9e9ea",
+  "fontColor": "#83888D",
+  "underLineColor": "#dbeffb",
+  "trendLineColor": "#4bafe9",
+  "width": "100%",
+  "locale": "en"
+}
+  );
+  </script>
+</div>
+
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <a class="display-6" style="font-weight:bold; color:#000;" href="/xmr.html">XMR</a>
+</div>
+
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-copyright"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.MediumWidget(
+  {
+  "container_id": "tv-medium-widget",
+  "symbols": [
+
+    [
+      "XMR",
+      "KRAKEN:XMRUSD|12m"
+    ]
+  ],
+  "greyText": "Quotes by",
+  "gridLineColor": "#e9e9ea",
+  "fontColor": "#83888D",
+  "underLineColor": "#dbeffb",
+  "trendLineColor": "#4bafe9",
+  "width": "100%",
+  "locale": "en"
+}
+  );
+  </script>
+</div>
+
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h2 class="display-6" style="font-weight:bold;">LIVE RATES</h2>
 </div>
 
 
-  <div class="tradingview-widget-container">
+<div class="tradingview-widget-container">
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/KRAKEN-BTCUSD/" rel="noopener" target="_blank"></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
   {
@@ -100,131 +222,4 @@ title: Colorchain
 }
   </script>
 </div>
-
-
-
-
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="display-6" style="font-weight:bold;">BTC</h2>
-</div>
-
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-copyright"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script type="text/javascript">
-  new TradingView.MediumWidget(
-  {
-  "container_id": "tv-medium-widget",
-  "symbols": [
-    [
-      "BTC",
-      "KRAKEN:BTCUSD|12m"
-    ]
-  ],
-  "greyText": "Quotes by",
-  "gridLineColor": "#e9e9ea",
-  "fontColor": "#83888D",
-  "underLineColor": "#dbeffb",
-  "trendLineColor": "#4bafe9",
-  "width": "100%",
-  "locale": "en"
-}
-  );
-  </script>
-</div>
-
-
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="display-6" style="font-weight:bold;">ETH</h2>
-</div>
-
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-copyright"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script type="text/javascript">
-  new TradingView.MediumWidget(
-  {
-  "container_id": "tv-medium-widget",
-  "symbols": [
-
-    [
-      "ETH",
-      "KRAKEN:ETHUSD|12m"
-    ]
-  ],
-  "greyText": "Quotes by",
-  "gridLineColor": "#e9e9ea",
-  "fontColor": "#83888D",
-  "underLineColor": "#dbeffb",
-  "trendLineColor": "#4bafe9",
-  "width": "100%",
-  "locale": "en"
-}
-  );
-  </script>
-</div>
-
-
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="display-6" style="font-weight:bold;">LTC</h2>
-</div>
-
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-copyright"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script type="text/javascript">
-  new TradingView.MediumWidget(
-  {
-  "container_id": "tv-medium-widget",
-  "symbols": [
-
-    [
-      "LTC",
-      "KRAKEN:LTCUSD|12m"
-    ]
-  ],
-  "greyText": "Quotes by",
-  "gridLineColor": "#e9e9ea",
-  "fontColor": "#83888D",
-  "underLineColor": "#dbeffb",
-  "trendLineColor": "#4bafe9",
-  "width": "100%",
-  "locale": "en"
-}
-  );
-  </script>
-</div>
-
-
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <h2 class="display-6" style="font-weight:bold;">XMR</h2>
-</div>
-
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-copyright"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script type="text/javascript">
-  new TradingView.MediumWidget(
-  {
-  "container_id": "tv-medium-widget",
-  "symbols": [
-
-    [
-      "XMR",
-      "KRAKEN:XMRUSD|12m"
-    ]
-  ],
-  "greyText": "Quotes by",
-  "gridLineColor": "#e9e9ea",
-  "fontColor": "#83888D",
-  "underLineColor": "#dbeffb",
-  "trendLineColor": "#4bafe9",
-  "width": "100%",
-  "locale": "en"
-}
-  );
-  </script>
-</div>
-
-
 </div>
